syntax = "proto3";
package tss.v1beta1;

option go_package = "github.com/axelarnetwork/axelar-core/x/tss/types";

import "gogoproto/gogo.proto";
import "snapshot/exported/v1beta1/types.proto";

option (gogoproto.goproto_getters_all) = false;

// SignInfo holds information about a sign request
message SignInfo {
  string key_id = 1 [ (gogoproto.customname) = "KeyID" ];
  string sig_id = 2 [ (gogoproto.customname) = "SigID" ];
  bytes msg = 3;
  snapshot.exported.v1beta1.Snapshot snapshot = 4
      [ (gogoproto.nullable) = false ];
}